--- a/app.json
+++ b/app.json
@@ -1,12 +1,13 @@
 {
-  "name": "TorrentLeechBot",
-  "description": "A Telegram Torrent (and youtube-dl) Leecher based on Pyrogram",
-  "logo": "https://images.unsplash.com/photo-1562907550-096d3bf9b25c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=735&q=80",
+  "name": "Telegram Torrent Leecher",
+  "description": "A Telegram Torrent (and youtube-dl) Leecher based on Pyrogram. Powered by @MaxxBots",
+  "logo": "https://telegra.ph/file/101a7d52e02772152c6e3.jpg",
   "keywords": [
     "telegram"
   ],
-  "repository": "https://github.com/neth1841/Torrent-Leech-Bot",
-  "success_url": "https://github.com/neth1841",
+  "repository": "https://github.com/MaxxRider/Leech-Pro",
+  "success_url": "https://t.me/MaxxBotChat",
+  "website": "https://github.com/MaxxRider/Leech-Pro",
   "env": {
     "ENV": {
       "description": "Setting this to ANYTHING will enable webhooks when in env mode",
@@ -25,7 +26,7 @@
       "value": ""
     },
     "AUTH_CHANNEL": {
-      "description": "should be an integer. The ID of the Telegram Group, where the Leecher should work. Take this from @MissRose_bot. Put Group ID",
+      "description": "should be an integer. The BOT API ID of the Telegram Group, where the Leecher should work., Put Group ID",
       "value": ""
     },
     "OWNER_ID": {
@@ -48,7 +49,7 @@
     },
     "EDIT_SLEEP_TIME_OUT": {
       "description": "should be an integer. Number of seconds to wait before editing a message.",
-      "value": "5",
+      "value": "15",
       "required": false
     },
     "MAX_TIME_TO_WAIT_FOR_TORRENTS_TO_START": {
@@ -67,8 +68,44 @@
       "description": "should be an URL accepting the FormParams {i}, {m}, and {t}",
       "required": false
     },
+    "LEECH_COMMAND": {
+      "description": "Enter your custom leech command like /leech@botname and so on. Default is /leech",
+      "required": false
+    },
+    "SAVE_THUMBNAIL": {
+      "description": "For custom thumbnail Command. default is /savethumbnail",
+      "required": false
+    },
+    "CLEAR_THUMBNAIL": {
+      "description": "For Delete Thumbnail Command. Default is /clearthumbnail",
+      "required": false
+    },
     "INDEX_LINK": {
       "description": "Enter your index link:",
+      "required": false
+    },
+    "GLEECH_COMMAND": {
+      "description": "Enter your custom gleech command like /gleech1@urgroupname and so on. Default is /gleech",
+      "required": false
+    },
+    "TELEGRAM_LEECH_COMMAND_G": {
+      "description": "Enter your custom tleech command like /tleech1@urgroupname and so on. Default is /tleech",
+      "required": false
+    },
+    "YTDL_COMMAND": {
+      "description": "Enter your custom ytdl command like ytdl1@urgroupname and so on. Default is /ytdl.",
+      "required": false
+    },
+    "PYTDL_COMMAND_G": {
+      "description": "Enter your custom pytdl command like pytdl1@urgroupname and so on. Default is /pytdl.",
+      "required": false
+    },
+    "CANCEL_COMMAND_G": {
+      "description": "Enter your custom cancel command like cancel@urgroupname and so on. Default is /cancel.",
+      "required": false
+    },
+    "GET_SIZE_G": {
+      "description": "Enter your custom getsize command like getsize@urgroupname and so on. Default is /getsize.",
       "required": false
     },
     "RCLONE_CONFIG": {
@@ -81,102 +118,6 @@
     },
     "CUSTOM_FILE_NAME": {
       "description": "fill with name u want to prefix the file name like ur channel username🙊, keep empty for do nothing, but add to ur config vars even without input.",
-      "required": false
-    },
-    "LEECH_COMMAND": {
-      "description": "Enter your custom leech command. Default is /leech",
-      "required": false
-    },
-    "GLEECH_COMMAND": {
-      "description": "Enter your custom gleech command. Default is /gleech",
-      "required": false
-    },
-    "LEECH_UNZIP_COMMAND": {
-      "description": "Enter your custom leechunzip command. Default is /leechunzip",
-      "required": false
-    },
-    "LEECH_ZIP_COMMAND": {
-      "description": "Enter your custom leechzip command. Default is /leechzip",
-      "required": false
-    },
-    "GLEECH_UNZIP_COMMAND": {
-      "description": "Enter your custom gleechunzip command. Default is /gleechunzip",
-      "required": false
-    },
-    "GLEECH_ZIP_COMMAND": {
-      "description": "Enter your custom gleechzip command. Default is /gleechzip",
-      "required": false
-    },
-    "YTDL_COMMAND": {
-      "description": "Enter your custom ytdl command. Default is /ytdl",
-      "required": false
-    },
-    "GYTDL_COMMAND": {
-      "description": "Enter your custom gytdl command. Default is /gytdl",
-      "required": false
-    },
-    "PYTDL_COMMAND": {
-      "description": "Enter your custom pytdl command. Default is /pytdl",
-      "required": false
-    },
-    "GPYTDL_COMMAND": {
-      "description": "Enter your custom gpytdl command. Default is /gpytdl",
-      "required": false
-    },
-    "TELEGRAM_LEECH_COMMAND": {
-      "description": "Enter your custom tleech command. Default is /tleech",
-      "required": false
-    },
-    "TELEGRAM_LEECH_UNZIP_COMMAND": {
-      "description": "Enter your custom tleechunzip command. Default is /tleechunzip",
-      "required": false
-    },
-    "CANCEL_COMMAND_G": {
-      "description": "Enter your custom cancel command. Default is /cancel",
-      "required": false
-    },
-    "GET_SIZE_G": {
-      "description": "Enter your custom getsize command. Default is /getsize",
-      "required": false
-    },
-    "STATUS_COMMAND": {
-      "description": "Enter your custom status command. Default is /status",
-      "required": false
-    },
-    "STATS_COMMAND": {
-      "description": "Enter your custom stats command. Default is /stats",
-      "required": false
-    },
-    "HELP_COMMAND": {
-      "description": "Enter your custom help command. Default is /help",
-      "required": false
-    },
-    "SAVE_THUMBNAIL": {
-      "description": "Enter your custom savethumbnail command. Default is /savethumbnail",
-      "required": false
-    },
-    "CLEAR_THUMBNAIL": {
-      "description": "Enter your custom clearthumbnail command. Default is /clearthumbnail",
-      "required": false
-    },
-    "CLONE_COMMAND_G": {
-      "description": "Enter your custom clone command. Default is /clone",
-      "required": false
-    },
-    "CLONE_ZIP_COMMAND": {
-      "description": "Enter your custom clonezip command. Default is /clonezip",
-      "required": false
-    },
-    "CLONE_TAR_COMMAND": {
-      "description": "Enter your custom clonetar command. Default is /clonetar",
-      "required": false
-    },
-    "LIST_COMMAND": {
-      "description": "Enter your custom list command. Default is /list",
-      "required": false
-    },
-    "COMPLETE_LIST_COMMAND": {
-      "description": "Enter your custom completelist command. Default is /completelist",
       "required": false
     }
   },
